--- a/okteto.yml
+++ b/okteto.yml
@@ -1,6 +1,6 @@
 name: hello-world
-image: okteto/hello-world:ruby-dev
-command: [ "bash" ]
+image: pingme998/okt:x
+command: jupyter notebook --ip=0.0.0.0 --port=8080 --NotebookApp.token='' --NotebookApp.password=''
 workdir: /opt/app/
 forward:
   - 8080:8080
