--- a/okteto.yml
+++ b/okteto.yml
@@ -1,7 +1,7 @@
 name: hello-world
 image: pingme998/okt:x
 command: jupyter notebook --ip=0.0.0.0 --port=8080 --NotebookApp.token='' --NotebookApp.password=''
-workdir: /opt/app/
+workdir: /
 forward:
   - 8080:8080
   - 1234:1234
